# hmt-escrow

./: .dockerignore  .env-example  .env-exchange  .env-launcher  .env.example  .eslintignore  .eslintrc  .eslintrc.json  .gitignore  .prettierrc  .soliumrc.json  .travis.yml  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  LICENSE  MANIFEST.in  Pipfile  README.md  SPHINX-DOCUMENTATION.md  coverage.json  docker-compose.test.yml  docker-compose.yaml  docker-compose.yml  docker-manifest.json  docker_push  foundry.toml  github-workflow-job-launch-server.yml  hardhat.config.ts  hmt.sol  manifest.json  networks.json  package-lock.json  package.json  private-provider.js  private-provider.ts  pyproject.toml  requirements.txt  schema.graphql  setup.py  (+6 more)
api/: __init__.py  eth_bridge.py  storage.py
basemodels/: __init__.py
contracts/: Context.sol  Escrow.sol  EscrowFactory.sol  HMToken.sol  HMTokenInterface.sol  Migrations.sol  Ownable.sol  RewardPool.sol  SafeMath.sol  SkaleStorage.sol  Staking.sol  cHMToken.sol
coverage/: lcov.info
deployed-hmtoken/: hmt.address.json
docs/: CNAME
escrow-dashboard/: .eslintrc.json  .gitignore  Dockerfile  README.md  jest.config.ts  package.json  script.sh  tsconfig.json
examples/: LICENSE  README.md  docker-compose.test.yml  docker-compose.yml  docker-manifest.json  manifest.json
exchange/: package.json
hmt_escrow/: __init__.py  crypto.py  eth_bridge.py  job.py  kvstore_abi.py  storage.py  test_ipfs.py  test_ipns.py  test_job.py  test_manifest.py  utils.py
hmt_escrow_js/: .eslintrc.yml  .gitignore  Contracts.js  Dockerfile  Job.js  (+8 more)
(+586 files in other folders)
